<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.junaid.apitestcopy.activity.AboutActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/btn_about"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="33dp" />

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/aboutText"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:background="@color/btn_logut_bg"
        android:text="@string/btn_back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp" />
</RelativeLayout>
