<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.junaid.apitestcopy.activity.NICUinformation">


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="openNICUList"
            android:text="@string/proceed_to_list"
            android:layout_marginTop="15dp"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="446dp" />

        <TextView
            android:id="@+id/nicu_info_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            android:layout_below="@id/button"
            android:layout_marginTop="31dp"
            android:padding="10dp"
            android:text="@string/before_nicu"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/nicu_info_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/nicu_info_heading"
            android:padding="10dp"
            android:text="@string/nicu_info"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/nicu_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nicu_info_body"
            android:padding="5dp"
            android:src="@drawable/nicu" />


    </RelativeLayout>

</ScrollView>
