<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="243dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/hos_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textColor="@color/hos_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/hos_location"
            app:layout_constraintEnd_toEndOf="@+id/hos_location"
            app:layout_constraintStart_toStartOf="@+id/hos_location"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hos_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hos_name"
            android:layout_toEndOf="@+id/location"
            android:layout_toRightOf="@+id/location"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/hos_contact"
            app:layout_constraintEnd_toEndOf="@+id/hos_cost"
            app:layout_constraintStart_toStartOf="@+id/hos_contact"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hos_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/hos_location"
            android:layout_alignStart="@+id/hos_location"
            android:layout_below="@+id/hos_location"
            android:layout_marginTop="12dp"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/hos_cost"
            app:layout_constraintEnd_toEndOf="@+id/hos_available"
            app:layout_constraintStart_toStartOf="@+id/hos_cost" />

        <TextView
            android:id="@+id/hos_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/hos_contact"
            android:layout_alignStart="@+id/hos_contact"
            android:layout_centerVertical="true"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/hos_available"
            app:layout_constraintStart_toStartOf="@+id/hos_available"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hos_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/booking_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="13dp"
            android:text="@string/text_available"
            android:textColor="@android:color/holo_red_light"
            app:layout_constraintBottom_toTopOf="@+id/call_button"
            app:layout_constraintEnd_toStartOf="@+id/hos_numofbeds"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/hos_cost"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/hos_numofbeds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignBaseline="@+id/hos_available"
            android:layout_alignBottom="@+id/hos_available"
            android:layout_marginLeft="21dp"
            android:layout_marginStart="21dp"
            android:layout_toEndOf="@+id/hos_available"
            android:layout_toRightOf="@+id/hos_available"
            android:text="TextView"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="139dp" />

        <Button
            android:id="@+id/call_button"
            android:layout_width="123dp"
            android:layout_height="37dp"
            android:layout_alignBottom="@+id/booking_button"

            android:background="@android:color/holo_blue_light"

            android:text="@string/btn_call"
            android:textColor="@android:color/white"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="189dp" />

        <Button
            android:id="@+id/booking_button"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_toEndOf="@+id/call_button"
            android:layout_toRightOf="@+id/call_button"
            android:background="@android:color/holo_blue_light"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/btn_booking"
            android:textColor="@android:color/white"
            tools:layout_editor_absoluteX="242dp"
            tools:layout_editor_absoluteY="189dp" />

        <TextView
            android:id="@+id/bottomLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/call_button"
            android:text="@string/bottomLine" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/hos_name"
            android:text="@string/location"
            android:textColor="@android:color/holo_red_light" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/hos_contact"
            android:text="@string/contact"
            android:textColor="@android:color/holo_red_light" />

        <TextView
            android:id="@+id/cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/hos_cost"
            android:text="@string/cost"
            android:textColor="@android:color/holo_red_light" />


    </RelativeLayout>

</LinearLayout>